# integra

./: .gitignore  .gitmodules  README.md
prototypes/console_client/: CMakeLists.txt  main.cpp
wip/: requirements.txt
